# 10-herencia-polim-salario-alan-mendez

./: CMakeLists.txt  DesarrolladorJunior.cpp  DesarrolladorJunior.h  DesarrolladorSenior.cpp  DesarrolladorSenior.h  Empleado.cpp  Empleado.h  LiderTecnico.cpp  LiderTecnico.h  SistemaNomina.cpp  SistemaNomina.h  Tester.cpp  Tester.h  main.cpp
